fix: use criteria to filter APIs in plan upgraders
(cherry picked from commit a8f3274aaf510b2b0243876c70b03840dd1cbb20)